--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -13,10 +13,12 @@
     <li class="{{#if active.creditnotes}}active{{/if}}"><a href="/creditnotes">List Credit Notes</a></li>
     <li class="{{#if active.currencies}}active{{/if}}"><a href="/currencies">List Currencies</a></li>
     <li class="{{#if active.invoices}}active{{/if}}"><a href="/invoices">List Invoices</a></li>
+    <li class="{{#if active.invoicereminders}}active{{/if}}"><a href="/invoicereminders">List Invoice Reminders</a></li>
     <li class="{{#if active.items}}active{{/if}}"><a href="/items">List Items</a></li>
     <li class="{{#if active.journals}}active{{/if}}"><a href="/journals">List Journals</a></li>
     <li class="{{#if active.manualjournals}}active{{/if}}"><a href="/manualjournals">List Manual Journals</a></li>
     <li class="{{#if active.payments}}active{{/if}}"><a href="/payments">List Payments</a></li>
+    <li class="{{#if active.repeatinginvoices}}active{{/if}}"><a href="/repeatinginvoices">List Repeating Invoices</a></li>
     <li class="{{#if active.taxrates}}active{{/if}}"><a href="/taxrates">List Tax Rates</a></li>
     <li class="{{#if active.trackingcategories}}active{{/if}}"><a href="/trackingcategories">List Tracking Categories</a></li>
     <li class="{{#if active.users}}active{{/if}}"><a href="/users">List Users</a></li>
